added linked to p5play in html index

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ﻿<html>
+  <head>
+    <script src="./lib/p5.min.js"></script>
+    <script src="./sketch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+    <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <script src="./lib/p5.min.js"></script>
-  <script src="./sketch.js"></script>
-  <link rel="stylesheet" href="style.css"/>
-</head>
-
-<body>
-  <main>
-
-  </main>
-</body>
-
+  <body>
+    <main></main>
+  </body>
 </html>
