--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-﻿<html>
-  <head>
-    <script src="./lib/p5.min.js"></script>
-    <script src="./sketch.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
-    <script src="https://p5play.org/v3/planck.min.js"></script>
-    <script src="https://p5play.org/v3/p5play.js"></script>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<!DOCTYPE html>
+<html>
 
-  <body>
-    <main></main>
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>p5play</title>
+	<style>
+		html,
+		body {
+			background-color: black;
+			margin: 0;
+			padding: 0;
+			overscroll-behavior: none;
+		}
+	</style>
+</head>
+
+<body>
+	<script src="node_modules/p5/lib/p5.js"></script>
+	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
+	<script src="node_modules/p5play/planck.min.js"></script>
+	<script src="node_modules/p5play/p5play.js"></script>
+	<script src="sketch.js"></script>
+</body>
+
 </html>
