--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>p5play</title>
-    <style>
-      html,
-      body {
-        background-color: black;
-        margin: 0;
-        padding: 0;
-        overscroll-behavior: none;
-      }
-    </style>
-  </head>
-
-  <body>
+    <title>Tank-Battle</title>
     <script src="node_modules/p5/lib/p5.js"></script>
     <script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
     <script src="node_modules/p5play/planck.min.js"></script>
     <script src="node_modules/p5play/p5play.js"></script>
     <script src="tank.js"></script>
+    <script src="life.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <main></main>
   </body>
 </html>
