add first attempt of bullet class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="node_modules/p5play/p5play.js"></script>
     <script src="tank.js"></script>
     <script src="life.js"></script>
+    <script src="bullet.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
